--- a/addons/sourcemod/configs/surftimer/skillgroups.cfg
+++ b/addons/sourcemod/configs/surftimer/skillgroups.cfg
@@ -1,117 +1,117 @@
-// Skillgroups file
+// 技能组文件
 
-// Max rank name length is 32 characters (not including colours)
-// Available colors: {default}, {red}, {lightred}, {darkred}, {bluegray}, {blue}, {darkblue}, {purple}, {orchid}, {yellow}, {gold}, {lightgreen}, {green}, {lime}, {gray}, {gray2}
+// 最大等级名称长度为32个字符（不包括颜色）
+// 可用颜色：{default}、{red}、{lightred}、{darkred}、{bluegray}、{blue}、{darkblue}、{purple}、{orchid}、{yellow}、{gold}、{lightgreen}、{green}、{lime}、{gray}、{gray2}
 
-// Skillgroup types 
-// "rankTitle" -> name of the rank title
-// "nameColour" -> colour of the players name (Default: {default})
+// 技能组类型
+// "rankTitle" -> 等级标题的名称
+// "nameColour" -> 玩家姓名的颜色（默认：{default}）
 
-// Rank requirements (choose ONE per rank)
-// "points" -> flat amount of points the player must have to obtain this rank (Use a hyphen if you want to use a range, e.g "points" "1000-1499")
-// "percentage" -> the percentage of maximum points required to obtain this rank (default ckSurf calculation)
-// "rank" -> the rank requirement the player must have to be this rank (Use a hypen if you want to add a range, e.g "rank" "25-50")
+// 等级要求（每个等级选择一个）
+// "points" -> 玩家必须具有的固定点数（如果要使用范围，请使用连字符，例如 "points" "1000-1499"）
+// "percentage" -> 达到此等级所需的最大点数的百分比（默认 ckSurf 计算）
+// "rank" -> 玩家必须具有的等级要求，以达到此等级（如果要添加范围，请使用连字符，例如 "rank" "25-50"）
 
-// Always keep ranks in descending order while also following this order of
+// 始终保持等级按降序排列，并遵循以下顺序
 // (rank -> points / percentage)
 
-// This example replicates the KSF ranks
+// 此示例复制了 KSF 等级
 
 "SkillGroups"
 {
 	"1"
 	{
-		"rankTitle" "{default}[{style}{darkred}GENERAL{default}]"
+		"rankTitle" "{default}[{style}{darkred}顶级巅峰{default}]"
 		"nameColour" "{darkred}"
 		"rank" "1"
 	}
 	"2"
 	{
-		"rankTitle" "{default}[{red}COLONEL{default}]"
+		"rankTitle" "{default}[{red}王者之路{default}]"
 		"nameColour" "{red}"
 		"rank" "2"
 	}
 	"3"
 	{
-		"rankTitle" "{default}[{lightred}MAJOR{default}]"
+		"rankTitle" "{default}[{lightred}竞道高手{default}]"
 		"nameColour" "{lightred}"
 		"rank" "3"
 	}
 	"4"
 	{
-		"rankTitle" "{default}[{pink}LEGEND{default}]"
+		"rankTitle" "{default}[{pink}极速之魂{default}]"
 		"nameColour" "{pink}"
 		"rank" "4-10"
 	}
 	"5"
 	{
-		"rankTitle" "{default}[{purple}ELITE{default}]"
+		"rankTitle" "{default}[{purple}时空驰骋{default}]"
 		"nameColour" "{purple}"
 		"rank" "11-25"
 	}
 	"6"
 	{
-		"rankTitle" "{default}[{orange}VETERAN{default}]"
+		"rankTitle" "{default}[{orange}曲线掌握{default}]"
 		"nameColour" "{orange}"
 		"rank" "26-50"
 	}
 	"7"
 	{
-		"rankTitle" "{default}[{yellow}PRO{default}]"
+		"rankTitle" "{default}[{yellow}速度巅峰{default}]"
 		"nameColour" "{yellow}"
 		"rank" "51-100"
 	}
 	"8"
 	{
-		"rankTitle" "{default}[{green}SEMIPRO{default}]"
+		"rankTitle" "{default}[{green}星际飞行{default}]"
 		"nameColour" "{green}"
 		"rank" "101-200"
 	}
 	"9"
 	{
-		"rankTitle" "{default}[{lime}EXPERT{default}]"
+		"rankTitle" "{default}[{lime}极速引领{default}]"
 		"nameColour" "{lime}"
 		"rank" "201-350"
 	}
 	"10"
 	{
-		"rankTitle" "{default}[{lightgreen}SKILLED{default}]"
+		"rankTitle" "{default}[{lightgreen}速度征服{default}]"
 		"nameColour" "{lightgreen}"
 		"rank" "351-500"
 	}
 	"11"
 	{
-		"rankTitle" "{default}[{darkblue}CASUAL{default}]"
+		"rankTitle" "{default}[{darkblue}电光冲击{default}]"
 		"nameColour" "{darkblue}"
 		"points" "3000"
 	}
 	"12"
 	{
-		"rankTitle" "{default}[{blue}WANNABE{default}]"
+		"rankTitle" "{default}[{blue}赛道追求{default}]"
 		"nameColour" "{blue}"
 		"points" "1500-2999"
 	}
 	"13"
 	{
-		"rankTitle" "{default}[{lightblue}BEGINNER{default}]"
+		"rankTitle" "{default}[{lightblue}风速之轮{default}]"
 		"nameColour" "{lightblue}"
 		"points" "1000-1499"
 	}
 	"14"
 	{
-		"rankTitle" "{default}[{gray2}TRAINEE{default}]"
+		"rankTitle" "{default}[{gray2}竞速新秀{default}]"
 		"nameColour" "{gray2}"
 		"points" "300-999"
 	}
 	"15"
 	{
-		"rankTitle" "{default}[{gray}ROOKIE{default}]"
+		"rankTitle" "{default}[{gray}速度学徒{default}]"
 		"nameColour" "{gray}"
 		"points" "1-299"
 	}
 	"16"
 	{
-		"rankTitle" "{default}[UNRANKED]"
+		"rankTitle" "{default}初阶冒险"
 		"nameColour" "{default}"
 		"points" "0"
 	}
